test/logs.txt
In file included from ../map_tests/operator >=.cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:30:
../map_tests/../system/Alloc.hpp:55:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../map_tests/../system/Alloc.hpp:58:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
../map_tests/../system/Alloc.hpp:164:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../map_tests/../system/Alloc.hpp:167:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:3:10: error: expected "FILENAME" or <FILENAME>
#include MAP
         ^
../map_tests/__service.ipp:19:14: error: no template named '_map'; did you mean 'map'?
void fillMap(_map<T, V, C> &mp) {
             ^~~~
             map
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:916:28: note: 'map' declared here
class _LIBCPP_TEMPLATE_VIS map
                           ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:19:6: error: redefinition of 'fillMap'
void fillMap(_map<T, V, C> &mp) {
     ^
../map_tests/__service.ipp:6:6: note: previous definition is here
void fillMap(std::map<T, V, C> &mp) {
     ^
../map_tests/__service.ipp:35:2: error: no template named '_map'; did you mean 'map'?
        _map<int, int> mp1, mp2, mp3, mp4;
        ^~~~
        map
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:916:28: note: 'map' declared here
class _LIBCPP_TEMPLATE_VIS map
                           ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:36:2: error: no template named '_map'; did you mean 'map'?
        _map<string, string> mp5, mp6, mp7, mp8, mp9;
        ^~~~
        map
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:916:28: note: 'map' declared here
class _LIBCPP_TEMPLATE_VIS map
                           ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:39:40: error: no matching member function for call to 'insert'
                m1.insert(std::make_pair(2, 3)); mp1.insert(ft::make_pair(2, 3));
                                                 ~~~~^~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1200:9: note: candidate function not viable: no known conversion from 'ft::pair<int, int>' to 'const std::map<int, int>::value_type' (aka 'const pair<const int, int>') for 1st argument
        insert(const value_type& __v) {return __tree_.__insert_unique(__v);}
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1204:9: note: candidate function not viable: requires 2 arguments, but 1 was provided
        insert(const_iterator __p, const value_type& __v)
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1223:14: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        void insert(_InputIterator __f, _InputIterator __l)
             ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:40:40: error: no matching member function for call to 'insert'
                m2.insert(std::make_pair(3, 3)); mp2.insert(ft::make_pair(3, 3));
                                                 ~~~~^~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1200:9: note: candidate function not viable: no known conversion from 'ft::pair<int, int>' to 'const std::map<int, int>::value_type' (aka 'const pair<const int, int>') for 1st argument
        insert(const value_type& __v) {return __tree_.__insert_unique(__v);}
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1204:9: note: candidate function not viable: requires 2 arguments, but 1 was provided
        insert(const_iterator __p, const value_type& __v)
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1223:14: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        void insert(_InputIterator __f, _InputIterator __l)
             ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:41:40: error: no matching member function for call to 'insert'
                m3.insert(std::make_pair(3, 4)); mp3.insert(ft::make_pair(3, 4));
                                                 ~~~~^~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1200:9: note: candidate function not viable: no known conversion from 'ft::pair<int, int>' to 'const std::map<int, int>::value_type' (aka 'const pair<const int, int>') for 1st argument
        insert(const value_type& __v) {return __tree_.__insert_unique(__v);}
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1204:9: note: candidate function not viable: requires 2 arguments, but 1 was provided
        insert(const_iterator __p, const value_type& __v)
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1223:14: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        void insert(_InputIterator __f, _InputIterator __l)
             ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:42:40: error: no matching member function for call to 'insert'
                m4.insert(std::make_pair(4, 4)); mp4.insert(ft::make_pair(4, 4));
                                                 ~~~~^~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1200:9: note: candidate function not viable: no known conversion from 'ft::pair<int, int>' to 'const std::map<int, int>::value_type' (aka 'const pair<const int, int>') for 1st argument
        insert(const value_type& __v) {return __tree_.__insert_unique(__v);}
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1204:9: note: candidate function not viable: requires 2 arguments, but 1 was provided
        insert(const_iterator __p, const value_type& __v)
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1223:14: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        void insert(_InputIterator __f, _InputIterator __l)
             ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:43:40: error: no matching member function for call to 'insert'
                m4.insert(std::make_pair(4, 5)); mp4.insert(ft::make_pair(4, 5));
                                                 ~~~~^~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1200:9: note: candidate function not viable: no known conversion from 'ft::pair<int, int>' to 'const std::map<int, int>::value_type' (aka 'const pair<const int, int>') for 1st argument
        insert(const value_type& __v) {return __tree_.__insert_unique(__v);}
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1204:9: note: candidate function not viable: requires 2 arguments, but 1 was provided
        insert(const_iterator __p, const value_type& __v)
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1223:14: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        void insert(_InputIterator __f, _InputIterator __l)
             ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:44:48: error: no matching member function for call to 'insert'
                m5.insert(std::make_pair("123", "123")); mp5.insert(ft::make_pair("123", "123"));
                                                         ~~~~^~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1200:9: note: candidate function not viable: no known conversion from 'ft::pair<const char *, const char *>' to 'const std::map<std::string, std::string>::value_type' (aka 'const pair<const std::string, std::string>') for 1st argument
        insert(const value_type& __v) {return __tree_.__insert_unique(__v);}
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1204:9: note: candidate function not viable: requires 2 arguments, but 1 was provided
        insert(const_iterator __p, const value_type& __v)
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1223:14: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        void insert(_InputIterator __f, _InputIterator __l)
             ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:45:48: error: no matching member function for call to 'insert'
                m6.insert(std::make_pair("123", "124")); mp6.insert(ft::make_pair("123", "124"));
                                                         ~~~~^~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1200:9: note: candidate function not viable: no known conversion from 'ft::pair<const char *, const char *>' to 'const std::map<std::string, std::string>::value_type' (aka 'const pair<const std::string, std::string>') for 1st argument
        insert(const value_type& __v) {return __tree_.__insert_unique(__v);}
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1204:9: note: candidate function not viable: requires 2 arguments, but 1 was provided
        insert(const_iterator __p, const value_type& __v)
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1223:14: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        void insert(_InputIterator __f, _InputIterator __l)
             ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:46:48: error: no matching member function for call to 'insert'
                m7.insert(std::make_pair("124", "123")); mp7.insert(ft::make_pair("124", "123"));
                                                         ~~~~^~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1200:9: note: candidate function not viable: no known conversion from 'ft::pair<const char *, const char *>' to 'const std::map<std::string, std::string>::value_type' (aka 'const pair<const std::string, std::string>') for 1st argument
        insert(const value_type& __v) {return __tree_.__insert_unique(__v);}
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1204:9: note: candidate function not viable: requires 2 arguments, but 1 was provided
        insert(const_iterator __p, const value_type& __v)
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1223:14: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        void insert(_InputIterator __f, _InputIterator __l)
             ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:47:47: error: no matching member function for call to 'insert'
                m8.insert(std::make_pair("12", "123")); mp8.insert(ft::make_pair("12", "123"));
                                                        ~~~~^~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1200:9: note: candidate function not viable: no known conversion from 'ft::pair<const char *, const char *>' to 'const std::map<std::string, std::string>::value_type' (aka 'const pair<const std::string, std::string>') for 1st argument
        insert(const value_type& __v) {return __tree_.__insert_unique(__v);}
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1204:9: note: candidate function not viable: requires 2 arguments, but 1 was provided
        insert(const_iterator __p, const value_type& __v)
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1223:14: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        void insert(_InputIterator __f, _InputIterator __l)
             ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:48:47: error: no matching member function for call to 'insert'
                m9.insert(std::make_pair("123", "12")); mp9.insert(ft::make_pair("123", "12"));
                                                        ~~~~^~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1200:9: note: candidate function not viable: no known conversion from 'ft::pair<const char *, const char *>' to 'const std::map<std::string, std::string>::value_type' (aka 'const pair<const std::string, std::string>') for 1st argument
        insert(const value_type& __v) {return __tree_.__insert_unique(__v);}
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1204:9: note: candidate function not viable: requires 2 arguments, but 1 was provided
        insert(const_iterator __p, const value_type& __v)
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:1223:14: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        void insert(_InputIterator __f, _InputIterator __l)
             ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:53:113: error: no template named '_map'; did you mean 'map'?
int run_map_unit_test(std::string test_name, std::vector<int> (func1)(std::map<T, V>), std::vector<int> (func2)(_map<T, V>)) {
                                                                                                                ^~~~
                                                                                                                map
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:916:28: note: 'map' declared here
class _LIBCPP_TEMPLATE_VIS map
                           ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:61:2: error: no template named '_map'
        _map<int, int> my_map;
        ^
../map_tests/__service.ipp:84:68: error: no template named '_map'; did you mean 'map'?
int run_map_allocator_unit_test(std::string test_name, void (func)(_map<T, V, C, A>)) {
                                                                   ^~~~
                                                                   map
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:916:28: note: 'map' declared here
class _LIBCPP_TEMPLATE_VIS map
                           ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:86:5: error: no template named '_map'; did you mean 'map'?
    _map<T, V, C, A> my_map;
    ^~~~
    map
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/map:916:28: note: 'map' declared here
class _LIBCPP_TEMPLATE_VIS map
                           ^
4 warnings and 19 errors generated.
ap
                           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
4 warnings and 20 errors generated.
warnings and 20 errors generated.
